UK0 remived from database generated in views only

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -1,1 +1,8 @@
 tr {height:10px;}
+div.scrollable-container{position: relative;}
+div.scrolling-area{height: 800px;overflow: auto;}
+.floatingHeader {
+    position: fixed;
+    top: 50px;
+    visibility: hidden;
+}
