--- a/public/css/override.css
+++ b/public/css/override.css
@@ -9,3 +9,4 @@ div.scrolling-area{height: 800px;overflow: auto;}
 .new_class {padding-left:5px;}
 .narrow{width:30%;}
 .medium-width{width:50%;}
+label{min-width:40px;}
