addressa nd business at register

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -12,3 +12,4 @@ div.scrolling-area{height: 800px;overflow: auto;}
 label{min-width:40px;}
 .bolder{font-size: larger;
 font-weight: 400;}
+.no-screen{display:none;}
