--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,3 +1,4 @@
 .no-print{display:none;}
 table.print{font-size:10px;cell-padding:0px}
-h4.print{margin-top:40px}
+h4.print{margin-top:100px}
+.no-screen{display:unset;}
