restoring after abortive setup stashed

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -13,3 +13,5 @@ label{min-width:40px;}
 .bolder{font-size: larger;
 font-weight: 400;}
 .no-screen{display:none;}
+.red{color:#f00;}
+.blue{color:#0044ff;}
