logic to AppServiceProvider

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -13,5 +13,7 @@ label{min-width:40px;}
 .bolder{font-size: larger;
 font-weight: 400;}
 .no-screen{display:none;}
-.red{color:#f00;}
-.blue{color:#0044ff;}
+.red{font-weight:300;
+    color: #0088ff;}
+.blue{font-weight:300;
+    color: #ff0000;}
