--- a/public/css/override.css
+++ b/public/css/override.css
@@ -17,3 +17,5 @@ font-weight: 400;}
     color: #0088ff;}
 .blue{font-weight:300;
     color: #ff0000;}
+.alert-info{max-width:400px;float: right;}
+.alert-div{width:30%;float:right;margin-right: 20%;}
