Sunday am commit

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -19,3 +19,4 @@ font-weight: 400;}
     color: #ff0000;}
 .alert-info{max-width:400px;float: right;}
 .alert-div{width:30%;float:right;margin-right: 20%;}
+.move-off{font-weight: 700;}
