--- a/public/css/override.css
+++ b/public/css/override.css
@@ -17,6 +17,6 @@ font-weight: 400;}
     color: #0088ff;}
 .blue{font-weight:300;
     color: #ff0000;}
-.alert-info{max-width:400px;float: right;}
+.alert-info{max-width:400px;float: right; padding:5px;margin-top:35px;}
 .alert-div{width:30%;float:right;margin-right: 20%;}
 .move-off{font-weight: 700;}
