--- a/public/css/override.css
+++ b/public/css/override.css
@@ -20,6 +20,7 @@ font-weight: 400;}
 .alert-info{max-width:400px;float: right; padding:5px;margin-top:35px;}
 .alert-div{width:30%;float:right;margin-right: 20%;}
 .move-off{font-weight: 700;}
+.date-range{font-size: 14px;}
 
 /***** buttons ******/
 .btn-default.btn-inverse {
