--- a/public/css/override.css
+++ b/public/css/override.css
@@ -21,6 +21,14 @@ font-weight: 400;}
 .alert-div{width:30%;float:right;margin-right: 20%;}
 .move-off{font-weight: 700;}
 .date-range{font-size: 14px;}
+.btn-xl {
+    padding: 18px 28px;
+    font-size: 30px; //change this to your desired size
+line-height: normal;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+}
 
 /***** buttons ******/
 .btn-default.btn-inverse {
@@ -893,27 +901,7 @@ font-weight: 400;}
     background-color: #d9534f;
 }
 
-body {
-    padding-top: 20px;
-}
 
 .bg-body {
     background: #000;
-}
-
-h2, p {
-    text-align: center;
-}
-
-p {
-    padding: 1em;
-}
-
-.jumbotron {
-    margin-top: 10px;
-    padding: 10px 0;
-}
-.jumbotron h1 {
-    font-size: 35px;
-    margin-bottom: 20px;
 }
