print formatted at last

--- a/public/css/print.css
+++ b/public/css/print.css
@@ -2,8 +2,8 @@
 table.print{font-size:8pt;line-height: 8pt; cell-padding:0px}
 h4.print{margin-top:100px}
 .no-screen{display:unset;}
-.table-condensed tr td {
-    padding: 0px;
+.table-condensed >tbody>tr>td {
+    padding: 2px 3px 1px;
 }
 /*@media print{
     .no-screen{display:inline-block;}
