--- a/public/css/print.css
+++ b/public/css/print.css
@@ -5,6 +5,7 @@ h4.print{margin-top:100px}
 .table-condensed >tbody>tr>td {
     padding: 2px 3px 1px;
 }
-/*@media print{
-    .no-screen{display:inline-block;}
-}*/
+@media print{
+    /*.no-screen{display:inline-block;}*/
+    .medium-to-wide{width:100%;}
+}
